<resources>
    <string name="app_name">MPLRSS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_favoris">Mes Favoris</string>
    <string name="menu_fichierrss">Mes FichierRSS</string>
    <string name="menu_supprimer">Supprimer</string>
    <string name="menu_sauvegarder">Sauvegarder</string>
    <string name="menu_chercher">chercher</string>
</resources>
